added login service

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -12,9 +12,9 @@
                     <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                   </a>
               </li>
-              <li class="{'active':stateName=='patientdetails'}">
+              <li ng-class="{'active':stateName=='patientdetails'}">
                 <a ui-sref="patientdetails">
-                  <i class="fa fa-dashboard"></i> <span>Patient Management</span>
+                  <i class="fa fa-user"></i> <span>Patient Management</span>
                 </a>
               </li>
               <li>
