--- a/views/edit.html
+++ b/views/edit.html
@@ -9,15 +9,13 @@
              <div class="panel panel-default">
                <div class="panel-heading">
                <h4 class="panel-title">
-                 <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                 <a data-toggle="collapse" data-parent="#accordion"  data-target="#collapseOne">
                  Personal Information
                  </a>
                </h4>
                </div>
                <div id="collapseOne" class="panel-collapse collapse in">
                <div class="panel-body">
-
-
                  <form name="item">
                  <div class="card card-block m-b-0">
                    <div class="form-group row">
@@ -170,7 +168,7 @@
              <div class="panel panel-default">
                <div class="panel-heading">
                <h4 class="panel-title">
-                 <a data-toggle="collapse" class="collapsed" data-parent="#accordion" href="#collapseTwo">
+                 <a data-toggle="collapse" class="collapsed" data-parent="#accordion" data-target="#collapseTwo">
                  Guirdains Information
                  </a>
                </h4>
@@ -225,7 +223,7 @@
              <div class="panel panel-default">
                <div class="panel-heading">
                <h4 class="panel-title">
-                 <a data-toggle="collapse" class="collapsed" data-parent="#accordion" href="#collapseThree">
+                 <a data-toggle="collapse" class="collapsed" data-parent="#accordion" data-target="#collapseThree">
                  Department
                  </a>
                </h4>
@@ -264,7 +262,6 @@
                        <input type="text" class="form-control boxed" placeholder="">
                      </div>
                    </div>
-
                    <div class="form-group row">
                      <div class="col-sm-10 col-sm-offset-2">
                        <button type="submit" class="btn btn-primary">
