--- a/views/login.html
+++ b/views/login.html
@@ -8,25 +8,28 @@
           </div>
         </h1>
       </header>
-      <div class="auth-content">
+      <div class="auth-content" ng-init="loginPage()">
         <p class="text-xs-center">LOGIN TO CONTINUE</p>
         <form name="login-form">
           <div class="form-group">
             <label for="username">Username</label>
-            <input type="email" class="form-control underlined" name="username" id="username" placeholder="Your email address" required>
+            <input type="text" class="form-control underlined" name="username" id="username" ng-model="user.username" placeholder="Your email address" required>
           </div>
           <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control underlined" name="password" id="password" placeholder="Your password" required>
+            <input type="password" class="form-control underlined" name="password" id="password" ng-model="user.password" placeholder="Your password" required>
           </div>
           <div class="form-group">
             <label for="remember">
-              <input class="checkbox" id="remember" type="checkbox">
+              <input class="checkbox" id="remember" type="checkbox" ng-model="user.remember">
               <span>Remember me</span>
             </label>
           </div>
           <div class="form-group">
-            <button type="submit" class="btn btn-block btn-primary">Login</button>
+            <button type="submit" class="btn btn-block btn-primary" ng-click="login()">Login</button>
+            <section  align="center m-t-sm">
+                <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="close()">{{alert.msg}}</alert>
+            </section>
           </div>
         </form>
       </div>
