--- a/views/header.html
+++ b/views/header.html
@@ -8,14 +8,9 @@
     <ul class="nav-profile">
       <li class="profile dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-          <div class="img" style="background-image: url('assets/faces/3.jpg')"> </div>
-          <span class="name">John Doe</span>
+          <span class="name">{{logedIn_user.first_name}} {{logedIn_user.last_name}}</span>
         </a>
         <div class="dropdown-menu profile-dropdown-menu" aria-labelledby="dropdownMenu1">
-          <a class="dropdown-item" href="#"> <i class="fa fa-user icon"></i> Profile </a>
-          <a class="dropdown-item" href="#"> <i class="fa fa-bell icon"></i> Notifications </a>
-          <a class="dropdown-item" href="#"> <i class="fa fa-gear icon"></i> Settings </a>
-          <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#"> <i class="fa fa-power-off icon"></i> Logout </a>
         </div>
       </li>
