--- a/views/header.html
+++ b/views/header.html
@@ -7,7 +7,7 @@
   <div class="header-block header-block-nav">
     <ul class="nav-profile">
       <li class="profile dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">
           <span class="name">{{logedIn_user.first_name}} {{logedIn_user.last_name}}</span>
         </a>
         <div class="dropdown-menu profile-dropdown-menu" aria-labelledby="dropdownMenu1">
