--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -9,19 +9,36 @@
           <ul class="nav metismenu" id="sidebar-menu">
               <li ng-class="{'active':stateName=='dashboard'}">
                   <a ui-sref="dashboard">
-                    <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+                    <i class="fa fa-dashboard"></i> <span><translate text-value="Dashboard" language="language"></translate></span>
                   </a>
               </li>
               <li ng-class="{'active':stateName=='registeredList' || stateName=='newRegistration' || stateName=='registerEdit'}">
                 <a ui-sref="registeredList">
-                  <i class="fa fa-user"></i> <span>Patient Management</span>
+                  <i class="fa fa-user"></i> <span><translate text-value="Patient Management" language="language"></translate></span>
                 </a>
               </li>
               <li>
-                  <a href=""> <i class="fa fa-user"></i>Settings</a>
+                  <a href=""> <i class="fa fa-user"></i><translate text-value="Settings" language="language"></translate></a>
               </li>
           </ul>
       </nav>
   </div>
+  <footer class="sidebar-footer">
+    <ul class="nav metismenu" id="customize-menu">
+        <li>
+            <ul id="collapseOne" class="panel-collapse collapse">
+                <li class="customize">
+                    <div class="customize-item">
+                        <ul class="customize-colors">
+                            <li><a href="" ng-click="language='en'"><img src="assets/images/english.jpg" alt="" width="50"></a></li>
+                            <li><a href="" ng-click="language='fn'"><img src="assets/images/France.jpg" alt="" width="50"></a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+            <a href="" data-toggle="collapse" data-parent="#accordion"  data-target="#collapseOne"> <i class="fa fa-cog"></i> <translate text-value="Language" language="language"></translate> </a>
+        </li>
+    </ul>
+  </footer>
 </aside>
 <div class="sidebar-overlay" id="sidebar-overlay"></div>
