added form fields

--- a/views/header.html
+++ b/views/header.html
@@ -11,7 +11,7 @@
           <span class="name">{{logedIn_user.first_name}} {{logedIn_user.last_name}}</span>
         </a>
         <div class="dropdown-menu profile-dropdown-menu" aria-labelledby="dropdownMenu1">
-          <a class="dropdown-item" href="#"> <i class="fa fa-power-off icon"></i> Logout </a>
+          <a class="dropdown-item" href="#" ng-click="signout()"> <i class="fa fa-power-off icon"></i> Logout </a>
         </div>
       </li>
     </ul>
