--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -26,7 +26,7 @@
   <footer class="sidebar-footer">
     <ul class="nav metismenu" id="customize-menu">
         <li>
-            <ul id="collapseOne" class="panel-collapse collapse">
+            <ul id="language" class="panel-collapse collapse">
                 <li class="customize">
                     <div class="customize-item">
                         <ul class="customize-colors">
@@ -36,7 +36,7 @@
                     </div>
                 </li>
             </ul>
-            <a href="" data-toggle="collapse" data-parent="#accordion"  data-target="#collapseOne"> <i class="fa fa-cog"></i> <translate text-value="Language" language="language"></translate> </a>
+            <a href="" data-toggle="collapse" data-parent="#accordion"  data-target="#language"> <i class="fa fa-cog"></i> <translate text-value="Language" language="language"></translate> </a>
         </li>
     </ul>
   </footer>
