updated the list page

--- a/views/registration/patient_edit.html
+++ b/views/registration/patient_edit.html
@@ -3,6 +3,7 @@
     <h3 class="title">
       Update Details
     </h3>
+    <p class="title-description">Update the details information of a patient</p>
   </div>
   <div class="panel-group" id="accordion">
    <div class="panel panel-default">
