--- a/views/registration/patient_list.html
+++ b/views/registration/patient_list.html
@@ -1,4 +1,4 @@
-<article class="content items-list-page">
+<article class="content items-list-page" ng-init="loadRegisterList()">
    <div class="title-search-block">
      <div class="title-block">
          <div class="row">
@@ -8,10 +8,11 @@
                      <a ui-sref="newRegistration" class="btn btn-primary btn-sm rounded-s m-l-20">
                        Add New
                      </a>
-                     <a href="#" class="btn btn-danger btn-sm rounded-s m-l-5">
+                     <!-- <a href="#" class="btn btn-danger btn-sm rounded-s m-l-5">
                        Delete
-                     </a>
+                     </a> -->
                  </h3>
+                 <p class="title-description"> List of registered patient</p>
              </div>
          </div>
      </div>
@@ -31,79 +32,60 @@
       <ul class="item-list striped">
         <li class="item item-list-header hidden-sm-down">
           <div class="item-row">
-            <div class="item-col fixed item-col-check">
-              <label class="item-check" id="select-all-items">
-                <input type="checkbox" class="checkbox">
-                <span></span>
-              </label>
-            </div>
-
             <div class="item-col item-col-header item-col-title">
               <div> <span>Name</span> </div>
             </div>
             <div class="item-col item-col-header item-col-author">
-              <div class="no-overflow"> <span>Reason</span> </div>
+              <div class="no-overflow"> <span>Registration No.</span> </div>
             </div>
             <div class="item-col item-col-header item-col-author">
-              <div class="no-overflow"> <span>Console Doctor</span> </div>
+              <div class="no-overflow"> <span>Mobile</span> </div>
+            </div>
+            <div class="item-col item-col-header item-col-author">
+              <div class="no-overflow"> <span>Registration Type</span> </div>
             </div>
             <div class="item-col item-col-header item-col-date">
               <div> <span>Registration Date</span> </div>
             </div>
+            <div class="item-col item-col-header item-col-date">
+              <div> <span>Option</span> </div>
+            </div>
             <div class="item-col item-col-header fixed item-col-actions-dropdown"> </div>
           </div>
         </li>
-        <li class="item">
+        <li class="item" ng-repeat="reg in registerList">
           <div class="item-row">
-            <div class="item-col fixed item-col-check">
-              <label class="item-check" id="select-all-items">
-                <input type="checkbox" class="checkbox">
-                <span></span>
-              </label>
-            </div>
             <div class="item-col fixed pull-left item-col-title">
               <div>
                 <a href="#" class="">
-                  <h4 class="item-title">Santosh Kumar Majhi</h4>
+                  <h4 class="item-title">{{reg.first_name+' '+reg.last_name}}</h4>
                 </a>
               </div>
             </div>
             <div class="item-col item-col-author">
-              <div class="no-overflow"> <a href="">Hart Patients</a> </div>
+              <div class="no-overflow">{{reg.reg_no}}</div>
             </div>
             <div class="item-col item-col-author">
-              <div class="no-overflow"> <a href="">Meadow Katheryne</a> </div>
+              <div class="no-overflow">{{reg.mobile}}</div>
+            </div>
+            <div class="item-col item-col-author">
+              <div class="no-overflow">{{reg.registration_type}}</div>
             </div>
             <div class="item-col item-col-date">
-              <div class="no-overflow"> 04 DEC 10:45 </div>
+              <div class="no-overflow">{{reg.reg_date}}</div>
             </div>
-            <div class="item-col fixed item-col-actions-dropdown">
-              <div class="item-actions-dropdown">
-                <a class="item-actions-toggle-btn">
-                  <span class="inactive">
-                    <i class="fa fa-cog"></i>
-                  </span>
-                  <span class="active">
-                    <i class="fa fa-chevron-circle-right"></i>
-                  </span>
-                </a>
-                <div class="item-actions-block">
-                  <ul class="item-actions-list">
-                    <li>
-                      <a class="remove" href="" data-toggle="modal" data-target="#confirm-modal" ng-click="open()"> <i class="fa fa-trash-o "></i> </a>
-                    </li>
-                    <li>
-                      <a class="edit"  ui-sref="registerEdit"> <i class="fa fa-pencil"></i> </a>
-                    </li>
-                  </ul>
-                </div>
+            <div class="item-col item-col-date">
+              <div class="">
+                <a class="view"  ui-sref="registerEdit({reg_id:reg.id})"> <i class="fa fa-pencil"></i> </a>
+                <a class="edit"  ui-sref="detailsView({reg_id:reg.id})"> <i class="fa fa-pencil"></i> </a>
+                <a class="remove" href="" data-toggle="modal" data-target="#confirm-modal" ng-click="open()"> <i class="fa fa-trash-o "></i> </a>
               </div>
             </div>
           </div>
         </li>
       </ul>
     </div>
-   <nav class="text-xs-right">
+   <!-- <nav class="text-xs-right">
        <ul class="pagination">
            <li class="page-item"> <a class="page-link" href="">Prev</a> </li>
            <li class="page-item active"> <a class="page-link" href="">1</a> </li>
@@ -113,7 +95,7 @@
            <li class="page-item"> <a class="page-link" href="">5</a> </li>
            <li class="page-item"> <a class="page-link" href="">Next</a> </li>
        </ul>
-   </nav>
+   </nav> -->
 </article>
 <div class="modal fade in" id="confirm-modal"  ng-model="showModal">
     <div class="modal-dialog">
