--- a/views/registration/patient_registration.html
+++ b/views/registration/patient_registration.html
@@ -3,6 +3,7 @@
     <h3 class="title">
     Add new
     </h3>
+    <p class="title-description">Register a patient </p>
   </div>
   <div class="panel-group" id="accordion">
    <div class="panel panel-default">
@@ -361,7 +362,7 @@
        </div>
      </div>
    </div>
-   <div class="panel panel-default">
+   <!-- <div class="panel panel-default">
      <div class="panel-heading">
        <h4 class="panel-title">
          <a data-toggle="collapse" class="collapsed" data-parent="#accordion" data-target="#collapseFive">
@@ -426,7 +427,7 @@
          </form>
        </div>
      </div>
-   </div>
+   </div> -->
    <div class="panel panel-default">
      <div class="panel-heading">
        <h4 class="panel-title">
@@ -457,7 +458,7 @@
              </div>
              <div class="form-group row">
                <div class="col-sm-10 col-sm-offset-2">
-                 <button type="submit" class="btn btn-primary">
+                 <button type="submit" class="btn btn-primary" ng-click="register()">
                    Submit
                  </button>
                </div>
