--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -12,7 +12,7 @@
                     <i class="fa fa-dashboard"></i> <span><translate text-value="Dashboard" language="language"></translate></span>
                   </a>
               </li>
-              <li ng-class="{'active':stateName=='registeredList' || stateName=='newRegistration' || stateName=='registerEdit' || stateName=='detailsView'}">
+              <li ng-class="{'active':stateName=='registeredList' || stateName=='newRegistration' || stateName=='registerEdit' || stateName=='detailsView' || stateName=='cardPrint'}">
                 <a ui-sref="registeredList">
                   <i class="fa fa-user"></i> <span><translate text-value="Patient Management" language="language"></translate></span>
                 </a>
