--- a/assets/css/vendor.css
+++ b/assets/css/vendor.css
@@ -7112,7 +7112,7 @@ html {
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1rem;
+  font-size: 14px;
   line-height: 1.5;
   color: #373a3c;
   background-color: #fff;
