--- a/views/header.html
+++ b/views/header.html
@@ -1,3 +1,6 @@
+<section  align="center m-t-sm">
+    <alert class="alert-message"  ng-repeat="alert in alerts" type="{{alert.type}}" close="close()">{{alert.msg}}</alert>
+</section>
 <header class="header">
   <div class="header-block header-block-collapse hidden-lg-up">
     <button class="collapse-btn" id="sidebar-collapse-btn">
