--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -30,8 +30,8 @@
                 <li class="customize">
                     <div class="customize-item">
                         <ul class="customize-colors">
-                            <li><a href="" ng-click="language='en'"><img src="assets/images/english.jpg" alt="" width="50"></a></li>
-                            <li><a href="" ng-click="language='fn'"><img src="assets/images/France.jpg" alt="" width="50"></a></li>
+                            <li ng-click="language='en'" class="lang-item"><img src="assets/images/english.jpg" alt="" width="50"></li>
+                            <li ng-click="language='fn'" class="lang-item"><img src="assets/images/France.jpg" alt="" width="50"></li>
                         </ul>
                     </div>
                 </li>
