--- a/views/registration/card_print.html
+++ b/views/registration/card_print.html
@@ -4,7 +4,7 @@
         Print Preview
       </h3>
     </div>
-    <div class="row">
+    <div class="row" ng-init="loadDetails()">
       <div class="col-md-12 m-b-20">
         <div class="card card-info">
         <div class="card card-block" id="cover_page">
@@ -14,10 +14,10 @@
             </div>
             <div class="col-sm-6 text-right">
               <div class="clearfix">
-                <strong>Ref No :</strong> <span>01254623</span>
+                <strong>Ref No :</strong> <span>{{registerDetails.reg_no}}</span>
               </div>
               <div class="clearfix">
-                <strong>Date:</strong> <span>10/12/2016</span>
+                <strong>Date:</strong> <span>{{registerDetails.reg_date}}</span>
               </div>
             </div>
           </div>
@@ -34,36 +34,64 @@
               <table class="table table-bordered">
                 <tbody>
                   <tr>
-                    <th scope="row">Employee ID</th>
-                    <td>02</td>
+                    <th scope="row">Registration Type</th>
+                    <td>{{registerDetails.registration_type}}</td>
                   </tr>
                   <tr>
                     <th scope="row">FIrst Name</th>
-                    <td>Jacob</td>
+                    <td>{{registerDetails.first_name}}</td>
                   </tr>
                   <tr>
                     <th scope="row">Last Name</th>
-                    <td>Larry</td>
+                    <td>{{registerDetails.last_name}}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Address</th>
+                    <td>{{registerDetails.street}},{{registerDetails.city}},{{registerDetails.zip}},{{registerDetails.state}}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Mobile</th>
+                    <td>{{registerDetails.mobile}}</td>
                   </tr>
                   <tr>
                     <th scope="row">Email</th>
-                    <td>jlarry@gmail.com</td>
+                    <td>{{registerDetails.email}}</td>
                   </tr>
                   <tr>
                     <th scope="row">Gender</th>
-                    <td>Male</td>
+                    <td>{{registerDetails.gender}}</td>
                   </tr>
                   <tr>
-                    <th scope="row">Last Name</th>
-                    <td>Larry</td>
+                    <th scope="row">Maritial Status</th>
+                    <td>{{registerDetails.marital_status}}</td>
                   </tr>
                   <tr>
-                    <th scope="row">Email</th>
-                    <td>jlarry@gmail.com</td>
+                    <th scope="row">Profession Type</th>
+                    <td>{{registerDetails.prof_type}}</td>
                   </tr>
                   <tr>
-                    <th scope="row">Gender</th>
-                    <td>Male</td>
+                    <th scope="row">Guardian Name</th>
+                    <td>{{registerDetails.guardian_name}}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Guardian Mobile no</th>
+                    <td>{{registerDetails.guardian_mobile}}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Department</th>
+                    <td>{{registerDetails.department}}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Doctor Name</th>
+                    <td>{{registerDetails.doctor}}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Doctor Location</th>
+                    <td>{{registerDetails.doct_location}}</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Doctor Fee</th>
+                    <td>{{registerDetails.doct_price}}</td>
                   </tr>
                 </tbody>
               </table>
