--- a/views/registration/patient_registration.html
+++ b/views/registration/patient_registration.html
@@ -45,8 +45,8 @@
                </label>
                <div class="col-sm-10">
                  <input type="text" class="form-control boxed"  ng-model="patient.first_name" name="first_name" placeholder="First Name"  ng-pattern="/^(\D)+$/" required>
-                 <span class="help-block" ng-show="patient_registration.first_name.$error.required && patient_registration.first_name.$touched">Please enter first name</span>
-                 <span class="help-block" ng-show="patient_registration.first_name.$error.pattern && patient_registration.first_name.$touched">first name should not be numeric</span>
+                 <span class="help-block"  ng-show="patient_registration.first_name.$error.required && patient_registration.first_name.$touched">Please enter first name</span>
+                 <span class="help-block"   ng-show="patient_registration.first_name.$error.pattern && patient_registration.first_name.$touched">first name should not be numeric</span>
                </div>
              </div>
              <div class="form-group row" ng-class="{'has-error': (patient_registration.last_name.$invalid && patient_registration.last_name.$touched)}">
@@ -88,10 +88,10 @@
              </div>
              <div class="form-group row" ng-class="{'has-error': (patient_registration.email.$invalid && patient_registration.email.$touched)}">
                <label class="col-sm-2 form-control-label text-xs-right">
-                 Email:
+                 Email(optional):
                </label>
                <div class="col-sm-10">
-                 <input type="email" class="form-control boxed" ng-model="patient.email" name="email" placeholder="Email" >
+                 <input type="email" class="form-control boxed" ng-model="patient.email" name="email" placeholder="Email"  >
                  <span class="help-block" ng-show="patient_registration.email.$error.required && patient_registration.email.$touched">Please enter mail id</span>
                </div>
              </div>
@@ -109,8 +109,9 @@
                  City:
                </label>
                <div class="col-sm-10">
-                 <input type="text" class="form-control boxed" ng-model="patient.city" placeholder="City" name="city" required>
+                 <input type="text" class="form-control boxed" ng-model="patient.city" placeholder="City" name="city" required ng-pattern="/^(\D)+$/">
                  <span class="help-block" ng-show="patient_registration.city.$error.required && patient_registration.city.$touched">Please enter city name</span>
+                 <span class="help-block" ng-show="patient_registration.city.$error.pattern && patient_registration.city.$touched">city name not be a number</span>
                </div>
              </div>
              <div class="form-group row" ng-class="{'has-error': (patient_registration.state.$invalid && patient_registration.state.$touched)}">
@@ -120,7 +121,7 @@
                <div class="col-sm-10">
                  <input type="text" class="form-control boxed" ng-model="patient.state" placeholder="State" name="state" required ng-pattern="/^(\D)+$/">
                  <span class="help-block" ng-show="patient_registration.state.$error.required && patient_registration.state.$touched">Please enter state name</span>
-                 <span class="help-block" ng-show="patient_registration.state.$error.pattern && patient_registration.state.$touched">Please enter state name</span>
+                 <span class="help-block" ng-show="patient_registration.state.$error.pattern && patient_registration.state.$touched">state name not be a number</span>
                </div>
              </div>
              <div class="form-group row" ng-class="{'has-error': (patient_registration.zipcode.$invalid && patient_registration.zipcode.$touched)}">
@@ -128,9 +129,9 @@
                 Zip:
                </label>
                <div class="col-sm-10">
-                 <input type="text" class="form-control boxed" ng-model="patient.zip" name="zipcode" placeholder="Zip code" ng-maxlength="6" required ng-pattern="/^[0-9]/">
+                 <input type="text" class="form-control boxed" ng-model="patient.zip" name="zipcode" placeholder="Zip code" ng-maxlength="6" required ng-pattern="/^[0-9]{6,6}$/">
                  <span class="help-block" ng-show="patient_registration.zipcode.$error.required && patient_registration.zipcode.$touched">Please enter zipcode</span>
-                 <span class="help-block" ng-show="patient_registration.zipcode.$error.pattern && patient_registration.zipcode.$touched">Please enter zipcode</span>
+                 <span class="help-block" ng-show="patient_registration.zipcode.$error.pattern && patient_registration.zipcode.$touched">zipcode must not be numeric</span>
                </div>
              </div>
              <div class="form-group row">
