--- a/views/registration/patient_registration.html
+++ b/views/registration/patient_registration.html
@@ -140,7 +140,7 @@
                <div class="col-sm-10">
                  <p class="input-group w-full">
                    <!-- <input type="date" class="form-control" ng-model="patient.dob" id="date1" placeholder="" ng-change="calculateAge()"> -->
-                   <input type="text" class="form-control" placeholder="Date Of Birth" ng-change="calculateAge()" uib-datepicker-popup ng-model="patient.dob" is-open="popup2.opened" datepicker-options="dateOptions"  close-text="Close" />
+                   <input type="text" class="form-control" show-weeks="false" placeholder="Date Of Birth" ng-change="calculateAge()" uib-datepicker-popup ng-model="patient.dob" is-open="popup2.opened" datepicker-options="dateOptions" max-date="patient.reg_date" close-text="Close" />
                    <span class="input-group-btn">
                      <button type="button" class="btn btn-default" ng-click="open()"><i class="fa fa-calendar"></i></button>
                    </span>
