added alert msg

--- a/views/registration/patient_list.html
+++ b/views/registration/patient_list.html
@@ -56,7 +56,7 @@
           <div class="item-row">
             <div class="item-col fixed pull-left item-col-title">
               <div>
-                <a href="#" class="">
+                <a class="" ui-sref="detailsView({reg_id:reg.id})">
                   <h4 class="item-title">{{reg.first_name+' '+reg.last_name}}</h4>
                 </a>
               </div>
